Added script.js to possibility open searchbar by search button

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
     </nav>
 
 <div class="header__button">
-    <button class="searcBtn" aria-expanded="false">
+    <button class="searchBtn" aria-expanded="false">
         Szukaj <i class="fa-solid fa-magnifying-glass"></i>
     </button>
 
