--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -1,4 +1,4 @@
-<div class="searchbar">
+<div class="searchBar">
     <div class="container">
         <form action="/search" class="search__form" method="POST">
 
@@ -9,7 +9,6 @@
             name="searchTerm"
             placeholder="Szukaj strony..."          
             >
-
         </form>
         <div id="searchClose">Close</div>
     </div>
