--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,16 @@
 <header class="header">
-    <a href="/" class="header__logo">NodeJs</a>
+    <a href="/" class="header__logo">HisTorY ®</a>
 
     <nav class="header__nav">
         <ul>
             <li>
-                <a href="/" class="">Strona główna</a>
+                <a href="/" class="<%= isActiveRoute('/,currentRoute')  %>">Strona główna</a>
             </li>
             <li>
-                <a href="/" class="">O nas</a>
+                <a href="/about" class="<%= isActiveRoute('/about,currentRoute')%>">O nas</a>
             </li>
             <li>
-                <a href="/" class="">Kontakt</a>
+                <a href="/contact" class="<%= isActiveRoute('/contact,currentRoute')%>">Kontakt</a>
             </li>
         </ul>
     </nav>
