--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -10,6 +10,6 @@
             placeholder="Szukaj strony..."          
             >
         </form>
-        <div id="searchClose">Close</div>
+        <div id="searchClose">Zamknij</div>
     </div>
 </div>
