--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -12,7 +12,7 @@
 
 </form>
 
-<h3>Zarejestruj się</h3>
+<!-- <h3>Zarejestruj się</h3>
 <form action="/register" method="POST">
 
     <label for="username"><b>Użytkownik</b></label>
@@ -23,4 +23,4 @@
 
     <input type="submit" value="Register" class="btn">
 
-</form>
+</form> -->
