--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="footer">
-    &copy; <%= new Date().getFullYear() %>
+    &copy; Demokryt, <%= new Date().getFullYear() %>
 </footer>
