--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -1,23 +1,10 @@
 <header class="header">
     <a href="/" class="header__logo">Admin Panel</a>
 
-    <nav class="header__nav">
-        <!-- <ul>
-            <li>
-                <a href="/" class="">Strona główna</a>
-            </li>
-            <li>
-                <a href="/" class="">O nas</a>
-            </li>
-            <li>
-                <a href="/" class="">Kontakt</a>
-            </li> -->
-        </ul>
-    </nav>
-
-<div class="header__button">
-    <button>
-        Logout
-    </button>
+    <div class="header__button">
+        <a href="/logout">
+          Wyloguj
+        </a>
+      </div>
 
 </header>
